--- a/theme/templates/resource-landing-page/citation.html
+++ b/theme/templates/resource-landing-page/citation.html
@@ -1,7 +1,8 @@
 {% load hydroshare_tags %}
 
 <div class="col-sm-12 content-block">
-    <h3 id="citation">How to cite</h3>
+    <span id="citation" class="page-anchor"></span>
+    <h3>How to cite</h3>
 
     <div class="row">
         <div class="col-xs-12">
