--- a/theme/templates/resource-landing-page/citation.html
+++ b/theme/templates/resource-landing-page/citation.html
@@ -2,7 +2,7 @@
 
 <div class="col-sm-12 content-block">
     <span id="citation" class="page-anchor"></span>
-    <h3>How to cite</h3>
+    <h3>How to Cite</h3>
 
     <div class="row">
         <div class="col-xs-12">
