--- a/theme/templates/resource-landing-page/references.html
+++ b/theme/templates/resource-landing-page/references.html
@@ -21,7 +21,7 @@
     {% endif %}
     {% if show_relations_section %}
         <div class="col-xs-12 content-block">
-            <h4>Relations</h4>
+            <h4>Related Resources</h4>
             <table class="info-table">
                 {% for relation in relations %}
                     {% if relation.type|lower != "haspart" %}
@@ -85,7 +85,7 @@
     </div>
     <div class="col-xs-12 content-block">
         <br>
-        <h4>Relations</h4>
+        <h4>Related Resources</h4>
         <div class="alert alert-info alert-dismissible" role="alert">
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
