Set subject keywords to open a new tab on click

--- a/theme/templates/resource-landing-page/subject.html
+++ b/theme/templates/resource-landing-page/subject.html
@@ -4,7 +4,7 @@
     <div class="col-xs-12 content-block">
         <h3>Subject Keywords</h3>
 
-        <p id="keywords">{{ keywords }}</p>
+        <p id="keywords" class="hidden">{{ keywords }}</p>
 
         <div class="tags">
             <ul id="list-keywords" class="tag-list custom-well">
