--- a/theme/templates/pages/group.html
+++ b/theme/templates/pages/group.html
@@ -134,7 +134,7 @@
                                                 <p class="description"><strong>ABSTRACT: </strong>
                                                 </p> {{ res.metadata.description|linebreaks }}
                                             </div>
-                                            <div class="show-more-btn toggle-abstract btn-default" title="Show less">···</div>
+                                            <div class="btn-show-more toggle-abstract btn btn-default btn-xs">Show More</div>
                                         {% endif %}
                                     </div>
                             {% endfor %}
