--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -1438,8 +1438,8 @@
                             </li>
                         </ul>
                     </div>
-                    <a href="#" data-toggle="collapse" data-target="#usage-info" class="show-more-btn btn-default"
-                       title="Show more" style="text-decoration: none;">...</a>
+                    <a href="#" data-toggle="collapse" data-target="#usage-info" class="btn-show-more btn btn-default btn-xs"
+                       style="text-decoration: none;">Show More</a>
                     <br>
                 </div>
 
