--- a/theme/templates/resource-landing-page/references.html
+++ b/theme/templates/resource-landing-page/references.html
@@ -39,7 +39,14 @@
         <h3>References</h3>
     </div>
     <div class="col-xs-12 content-block">
-        <h4>Sources</h4>
+        <h4>Sources
+            <a id="add-source" class="btn btn-success btn-xs" data-toggle="modal"
+            title='Add Source
+
+If this resource was derived from another resource, click this button to create a link to the source resource from which this resource was derived. If the source resource is a HydroShare resource, you should paste in the URL to the source resource in HydroShare. If the source resource is something outside of HydroShare, you can paste in a URL or a full text citation to the external resource.'
+           data-target="#add-source-dialog"><i class="fa fa-plus"></i>
+            </a>
+        </h4>
 
         <div class="alert alert-info alert-dismissible" role="alert">
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -75,17 +82,18 @@
             </tbody>
         </table>
         {% endif %}
-
-        <a id="add-source" class="btn btn-success" data-toggle="modal"
-           data-target="#add-source-dialog"><i
-                class="fa fa-plus"></i> Add Source</a>
-        <span data-toggle="tooltip" data-placement="auto"
-              title='If this resource was derived from another resource, click this button to create a link to the source resource from which this resource was derived. If the source resource is a HydroShare resource, you should paste in the URL to the source resource in HydroShare. If the source resource is something outside of HydroShare, you can paste in a URL or a full text citation to the external resource.'
-              class="glyphicon glyphicon-info-sign text-muted"></span>
     </div>
     <div class="col-xs-12 content-block">
         <br>
-        <h4>Related Resources</h4>
+        <h4>Related Resources
+            <a id="add-relation" class="btn btn-success btn-xs" data-toggle="modal" title="Add Relation
+
+Click this button to add a relationship to another resource, external website, or document. You can express the type of relationship and then enter a URL to the resource or website. If the related resource does not have a URL, you can paste in a full text citation."
+            data-target="#add-relation-dialog">
+                <i class="fa fa-plus"></i>
+            </a>
+        </h4>
+
         <div class="alert alert-info alert-dismissible" role="alert">
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
@@ -124,14 +132,6 @@
             </tbody>
         </table>
         {% endif %}
-
-        <a id="add-relation" class="btn btn-success" data-toggle="modal"
-           data-target="#add-relation-dialog">
-            <i class="fa fa-plus"></i> Add Relation</a>
-
-        <span data-toggle="tooltip" data-placement="auto"
-              title='Click this button to add a relationship to another resource, external website, or document. You can express the type of relationship and then enter a URL to the resource or website. If the related resource does not have a URL, you can paste in a full text citation.'
-              class="glyphicon glyphicon-info-sign text-muted"></span>
     </div>
 {% endif %}
 
