--- a/theme/templates/resource-landing-page/resource-header.html
+++ b/theme/templates/resource-landing-page/resource-header.html
@@ -14,6 +14,10 @@
                         </td>
                     {% else %}
                     <td>
+                        <a type="button" id="btn-add-new-author" class="btn btn-success btn-xs" data-toggle="modal"
+                           data-target="#add-creator-dialog" title="Add Author">
+                            <span class="glyphicon glyphicon-plus"></span>
+                        </a>
                         <span class="authors-wrapper sortable">
                             {% for author in creator_formset.initial %}
                                 <span>
@@ -66,11 +70,7 @@
                         <span data-toggle="tooltip" data-placement="auto"
                               title='Drag and drop Authors to rearrange.'
                               class="glyphicon glyphicon-info-sign text-muted"></span>
-                        <br>
-                        <a type="button" id="btn-add-new-author" class="btn btn-success btn-sm" data-toggle="modal"
-                           data-target="#add-creator-dialog">
-                            <span class="glyphicon glyphicon-plus"></span><span class="button-label"> Add Author</span>
-                        </a>
+
                     </td>
                     {% endif %}
                 </tr>
