--- a/theme/templates/resource-landing-page/quota.html
+++ b/theme/templates/resource-landing-page/quota.html
@@ -1,52 +1,54 @@
 {% load hydroshare_tags %}
 {% if is_owner_user %}
-    <p>Storage</p>
-
     <div class="panel panel-default">
+        <div class="panel-heading">
+            <h3 class="panel-title">Storage</h3>
+        </div>
         <div class="panel-body">
-        <p>The size of this resource is <strong>{{ cm.size|filesizeformat }}</strong>.</p>
-        <span>The quota holder of this resource is:</span>
-        <span>
-            {% include "includes/profile-link.html" with user=quota_holder %}
-            {% include "includes/profile-card.html" %}
-        </span>
+            <span>The quota holder of this resource is:</span>
+            <span>
+                {% include "includes/profile-link.html" with user=quota_holder %}
+                {% include "includes/profile-card.html" %}
+            </span>
 
-        {% if metadata_form and owners|length > 1 %}
-            <button id="btn-change-quota-holder" type="button" class="btn btn-default btn-xs"
-                    style="margin-left: 5px;"
-                data-toggle="collapse" data-target="#form-quota-holder">
-                Change
-            </button>
+            {% if metadata_form and owners|length > 1 %}
+                <button id="btn-change-quota-holder" type="button" class="btn btn-default btn-xs"
+                        style="margin-left: 5px;"
+                    data-toggle="collapse" data-target="#form-quota-holder">
+                    Change
+                </button>
 
-            <form action="/hsapi/_internal/{{ cm.short_id }}/change-quota-holder/" method="POST"
-                  enctype="multipart/form-data" id="form-quota-holder" class="collapse">
-                {% csrf_token %}
-                <hr>
-                <div class="form-group">
-                    <fieldset>
-                        <div id="div_id_type" class="control-group">
-                            <label for="id_type" class="control-label requiredField">
-                                Change quota holder to another owner</label>
-                            <div class="controls">
-                                <select class="form-control input-sm select" id="new_holder_username"
-                                        name="new_holder_username">
-                                    {% for owner in owners %}
-                                        {% if owner.username != quota_holder.username %}
-                                            <option value={{ owner.username }}>{{ owner|display_name }}</option>
-                                        {% endif %}
-                                    {% endfor %}
-                                </select>
+                <form action="/hsapi/_internal/{{ cm.short_id }}/change-quota-holder/" method="POST"
+                      enctype="multipart/form-data" id="form-quota-holder" class="collapse">
+                    {% csrf_token %}
+                    <hr>
+                    <div class="form-group">
+                        <fieldset>
+                            <div id="div_id_type" class="control-group">
+                                <label for="id_type" class="control-label requiredField">
+                                    Change quota holder to another owner</label>
+                                <div class="controls">
+                                    <select class="form-control input-sm select" id="new_holder_username"
+                                            name="new_holder_username">
+                                        {% for owner in owners %}
+                                            {% if owner.username != quota_holder.username %}
+                                                <option value={{ owner.username }}>{{ owner|display_name }}</option>
+                                            {% endif %}
+                                        {% endfor %}
+                                    </select>
+                                </div>
                             </div>
-                        </div>
-                    </fieldset>
-                </div>
+                        </fieldset>
+                    </div>
 
-                <button type="button" class="btn btn-default" data-toggle="collapse"
-                        data-target="#form-quota-holder">Cancel</button>
-                <button type="submit" class="btn btn-primary btn-change-quota-holder"
-                style="margin-left: 5px;">Save Changes</button>
-            </form>
-        {% endif %}
+                    <button type="button" class="btn btn-default" data-toggle="collapse"
+                            data-target="#form-quota-holder">Cancel</button>
+                    <button type="submit" class="btn btn-primary btn-change-quota-holder"
+                    style="margin-left: 5px;">Save Changes</button>
+                </form>
+            {% endif %}
+            <hr>
+            <p>The size of this resource is <strong>{{ cm.size|filesizeformat }}</strong>.</p>
         </div>
     </div>
 {% endif %}
