File browser right click menu adjustments

--- a/theme/templates/resource-landing-page/credits.html
+++ b/theme/templates/resource-landing-page/credits.html
@@ -149,11 +149,12 @@
                 </tbody>
             </table>
         {% else %}
-            <p>No contributors have been added.</p>
+            <p class="small text-muted">No contributors have been added.</p>
         {% endif %}
     </div>
 
     <div class="col-sm-12 content-block">
+        <br>
         <h4>Funding Agencies
             <a id="btn-add-funding-agency" type="button" class="btn btn-success btn-xs" data-toggle="modal"
                title="Add Funding Agency" data-target="#add-funding-agency">
@@ -196,7 +197,7 @@
                 </tbody>
             </table>
         {% else %}
-            <p>No funding agencies have been added.</p>
+            <p class="small text-muted">No funding agencies have been added.</p>
         {% endif %}
     </div>
 {% endif %}
