--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -167,7 +167,7 @@
                             <i class="fa fa-plus icon-green" aria-hidden="true"></i>
                             <span>Add Metadata</span>
                         </li>
-                        <li class="dropdown-submenu submenu-trigger">
+                        <li data-menu-name="content-type" class="dropdown-submenu submenu-trigger">
                             <span tabindex="-1" class="">
                                 <i class="fa fa-exchange icon-blue" aria-hidden="true"></i>
                                 Set Content Type
@@ -211,7 +211,7 @@
                                 </li>
                             </ul>
                         </li>
-                        <li id="btn-remove-aggregation" data-fb-action="removeAggregation" data-toggle="tooltip"
+                        <li id="btn-remove-aggregation" data-menu-name="content-type"  data-fb-action="removeAggregation" data-toggle="tooltip"
                             title="Remove the content type association and delete content-level metadata"
                             data-placement="right">
                             <i class="fa fa-minus-circle btn-remove" aria-hidden="true"></i>
