--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -4712,3 +4712,12 @@ div#resource-content {
   font-size:15px;
   color:lightblue;
 }
+
+#coverage-spatial input[type=number]::-webkit-inner-spin-button,
+#coverage-spatial input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+}
+
+#coverage-spatial input[type=number] {
+	-moz-appearance: textfield;
+}
