--- a/theme/templates/resource-landing-page/coverage.html
+++ b/theme/templates/resource-landing-page/coverage.html
@@ -156,10 +156,10 @@
                         <br>
                         <div class="col-xs-12">
                             <div class="row">
-                                <div class="col-xs-1">
+                                <div class="col-xs-4 col-md-2">
                                     <h4>Spatial:</h4>
                                 </div>
-                                <div class="col-xs-11">
+                                <div class="col-xs-8 col-md-10">
                                     <a id="id-delete-spatial-resource" type="button" class="pull-left">
                                         <span class="glyphicon glyphicon-trash icon-button btn-remove"></span>
                                     </a>
@@ -198,7 +198,7 @@
                                 <div id="div_id_north" class="control-group" style="margin-bottom: 10px;">
                                     <div class="input-group">
                                         <span class="input-group-addon coordinates-label-addon">Latitude*</span>
-                                        <input type="text" class="form-control" placeholder="-90 to 90"
+                                        <input type="number" class="form-control" placeholder="-90 to 90"
                                                id="id_north" name="north"
                                                value="{% if coverage_spatial_form.initial.north %}{{ coverage_spatial_form.initial.north|floatformat:"4" }}{% endif %}">
                                         <span data-toggle="tooltip" data-placement="auto" title="WGS 84 decimal degrees"
@@ -209,7 +209,7 @@
                                 <div id="div_id_east" class="control-group" style="margin-bottom: 10px;">
                                     <div class="input-group">
                                         <span class="input-group-addon coordinates-label-addon">Longitude*</span>
-                                        <input type="text" class="form-control" placeholder="-180 to 180"
+                                        <input type="number" class="form-control" placeholder="-180 to 180"
                                                id="id_east" name="east"
                                                value="{% if coverage_spatial_form.initial.east %}{{ coverage_spatial_form.initial.east|floatformat:"4" }}{% endif %}">
                                         <span data-toggle="tooltip" data-placement="auto" title="WGS 84 decimal degrees"
@@ -220,7 +220,7 @@
                                 <div id="div_id_northlimit" class="control-group" style="margin-bottom: 10px;">
                                     <div class="input-group">
                                         <span class="input-group-addon coordinates-label-addon">North Latitude*</span>
-                                        <input type="text" class="form-control" placeholder="-90 to 90"
+                                        <input type="number" class="form-control" placeholder="-90 to 90"
                                                id="id_northlimit" name="northlimit"
                                                value="{% if coverage_spatial_form.initial.northlimit %}{{ coverage_spatial_form.initial.northlimit|floatformat:"4" }}{% endif %}">
                                         <span data-toggle="tooltip" data-placement="auto" title="WGS 84 decimal degrees"
@@ -231,7 +231,7 @@
                                 <div id="div_id_eastlimit" class="control-group" style="margin-bottom: 10px;">
                                     <div class="input-group">
                                         <span class="input-group-addon coordinates-label-addon">East Longitude*</span>
-                                        <input type="text" class="form-control" placeholder="-180 to 180"
+                                        <input type="number" class="form-control" placeholder="-180 to 180"
                                                id="id_eastlimit" name="eastlimit"
                                                value="{% if coverage_spatial_form.initial.eastlimit %}{{ coverage_spatial_form.initial.eastlimit|floatformat:"4" }}{% endif %}">
                                         <span data-toggle="tooltip" data-placement="auto" title="WGS 84 decimal degrees"
@@ -242,7 +242,7 @@
                                 <div id="div_id_southlimit" class="control-group" style="margin-bottom: 10px;">
                                     <div class="input-group">
                                         <span class="input-group-addon coordinates-label-addon">South Latitude*</span>
-                                        <input type="text" class="form-control" placeholder="-90 to 90"
+                                        <input type="number" class="form-control" placeholder="-90 to 90"
                                                id="id_southlimit" name="southlimit"
                                                value="{% if coverage_spatial_form.initial.southlimit %}{{ coverage_spatial_form.initial.southlimit|floatformat:"4" }}{% endif %}">
                                         <span data-toggle="tooltip" data-placement="auto" title="WGS 84 decimal degrees"
@@ -253,7 +253,7 @@
                                 <div id="div_id_westlimit" class="control-group" style="margin-bottom: 10px;">
                                     <div class="input-group">
                                         <span class="input-group-addon coordinates-label-addon">West Longitude*</span>
-                                        <input type="text" class="form-control" placeholder="-180 to 180"
+                                        <input type="number" class="form-control" placeholder="-180 to 180"
                                                id="id_westlimit" name="westlimit"
                                                value="{% if coverage_spatial_form.initial.westlimit %}{{ coverage_spatial_form.initial.westlimit|floatformat:"4" }}{% endif %}">
                                         <span data-toggle="tooltip" data-placement="auto" title="WGS 84 decimal degrees"
@@ -302,11 +302,12 @@
                      </button>
                 {% endif %}
             </div>
-            <div class="col-xs-12" style="margin-top: 20px;">
+            <div class="col-xs-12">
+                <br>
                 <div class="row">
-                    <div class="col-xs-1">
+                    <div class="col-xs-4 col-md-2">
                         <h4>Temporal:</h4></div>
-                    <div class="col-xs-11">
+                    <div class="col-xs-8 col-md-10">
                         <a id="id-delete-temporal-resource" type="button" class="pull-left">
                             <span class="glyphicon glyphicon-trash icon-button btn-remove"></span>
                         </a>
